@@ -1,3 +1,9 @@
+2012-10-10  Lucas Forschler  <lforschler@apple.com>
+
+        Remove Apple Mac Snow Leopard bots.
+        
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2012-10-10  Christophe Dumez  <christophe.dumez@intel.com>
 
         [EFL][WK2] Add toolbar buttons to MiniBrowser
